<resources>
    <string name="app_name">StressApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="everydayTest">ЕЖЕДНЕВНОЕ ТЕСТИРОВАНИЕ</string>
    <string name="report">Отчет</string>
    <string name="result">МОИ РЕЗУЛЬТАТЫ</string>

    <string name="everydayDescription">Прохождение тестирования состоит в соотношении состояния с психологическими признаками. Он представлен в виде шкалы с индексами от -3 до 3. Предлагается 30 пар слов, для которых свойственно противоположное значенине. Задание состоит в том, чтобы выбрать по 1 цифре на каждой шкале. Выбранное значение должно наиболее точно отражать состояние человека в момент прохождения тестирования.</string>
    <string name="goToTest">ПРОЙТИ ТЕСТ</string>

    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="nextState">следующее состояние</string>
    <string name="testPassed">Вы прошли тест!</string>
    <string name="results">Ваши результаты:</string>
    <string name="exit">Выход</string>

</resources>